# learn-ffi

./: .gitignore  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml
algo/: Cargo.toml
algo/src/: algo.rs  lib.rs  martix.rs  ventor.rs
learn-roaring-bitmap/: Cargo.toml
learn-roaring-bitmap/examples/: rb.rs
node-binding/: Cargo.toml  simple-test.js
node-binding/__test__/: index.spec.ts
node-binding/src/: lib.rs  martix.rs
python-binding/: Cargo.toml  pyproject.toml
python-binding/python/algo/: __init__.py
python-binding/src/: hasher.rs  lib.rs  matrix.rs  roraing_bitmap.rs
