[workspace]
members = ["algo", "learn-roaring-bitmap", "node-binding", "python-binding"]
resolver = "2"

[workspace.dependencies]
algo = { path = "algo" }
node-binding = { path = "node-binding" }
napi = { version = "2", no-default-features = true, features = ["full"] }
napi-derive = "2"
roaring = "0.10.6"
roaring_bitmap = "0.1.3"


[profile.release]
lto = true
